FWF-4805  - added new API to check if a process is initialized
